--- a/3332323/Info.plist
+++ b/3332323/Info.plist
@@ -20,6 +20,11 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>使用 NSAppleMusicUsageDescription</string>
 	<key>NSBluetoothAlwaysUsageDescription</key>
