--- a/3332323/Info.plist
+++ b/3332323/Info.plist
@@ -26,31 +26,31 @@
 		<true/>
 	</dict>
 	<key>NSAppleMusicUsageDescription</key>
-	<string>使用 NSAppleMusicUsageDescription</string>
+	<string>$(PRODUCT_NAME) 使用 NSAppleMusicUsageDescription</string>
 	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string>使用 NSBluetoothAlwaysUsageDescription</string>
+	<string>$(PRODUCT_NAME) 使用 NSBluetoothAlwaysUsageDescription</string>
 	<key>NSCalendarsUsageDescription</key>
-	<string>使用 NSCalendarsUsageDescription</string>
+	<string>$(PRODUCT_NAME) 使用 NSCalendarsUsageDescription</string>
 	<key>NSCameraUsageDescription</key>
-	<string>使用 NSCameraUsageDescription</string>
+	<string>$(PRODUCT_NAME) 使用 NSCameraUsageDescription</string>
 	<key>NSContactsUsageDescription</key>
-	<string>使用 NSContactsUsageDescription</string>
+	<string>$(PRODUCT_NAME) 使用 NSContactsUsageDescription</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>使用 NSLocationAlwaysAndWhenInUseUsageDescription</string>
+	<string>$(PRODUCT_NAME) 使用 NSLocationAlwaysAndWhenInUseUsageDescription</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>使用 NSLocationWhenInUseUsageDescription</string>
+	<string>$(PRODUCT_NAME) 使用 NSLocationWhenInUseUsageDescription</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>使用 NSMicrophoneUsageDescription</string>
+	<string>$(PRODUCT_NAME) 使用 NSMicrophoneUsageDescription</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>使用 NSPhotoLibraryAddUsageDescription</string>
+	<string>$(PRODUCT_NAME) 使用 NSPhotoLibraryAddUsageDescription</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>使用 NSPhotoLibraryUsageDescription</string>
+	<string>$(PRODUCT_NAME) 使用 NSPhotoLibraryUsageDescription</string>
 	<key>NSRemindersUsageDescription</key>
-	<string>使用 NSRemindersUsageDescription</string>
+	<string>$(PRODUCT_NAME) 使用 NSRemindersUsageDescription</string>
 	<key>NSSiriUsageDescription</key>
 	<string>使用 NSSiriUsageDescription</string>
 	<key>NSUserTrackingUsageDescription</key>
-	<string>使用 NSUserTrackingUsageDescription</string>
+	<string>$(PRODUCT_NAME) 使用 NSUserTrackingUsageDescription</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UIBackgroundModes</key>
